# pyTAMS

./: .buildinfo  .bumpversion.cfg  .gitignore  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Controls.html  Implementation.html  NOTICE  README.dev.md  README.md  TAMS.html  Theory.html  Tutorials.html  Usage.html  Validation.html  genindex.html  index.html  objects.inv  project_setup.md  py-modindex.html  pyproject.toml  search.html  searchindex.js  setup.cfg  sonar-project.properties
.github/workflows/: build.yml  cffconvert.yml  documentation.yml  markdown-link-check.yml  nightly.yml  sonarcloud.yml
_modules/: index.html  pytams.html
_modules/pytams/: bin.html  daskutils.html  database.html  fmodel.html  sqldb.html  tams.html  taskrunner.html  trajectory.html  utils.html  worker.html  xmlutils.html
_sources/: Controls.rst.txt  Implementation.rst.txt  TAMS.rst.txt  Theory.rst.txt  Tutorials.rst.txt  Usage.rst.txt  index.rst.txt
_sources/autoapi/: index.rst.txt
autoapi/: index.html
autoapi/pytams/: index.html
docs/: Controls.rst  Implementation.rst  Makefile  TAMS.rst  Theory.rst  Tutorials.rst  Usage.rst  Validation.rst  conf.py  index.rst  make.bat
examples/: MOC_Model.py  README.md  doubleWell3D.py  doubleWell3D_disk.py  input_MOC.toml  input_dw3D.toml
examples/BiChannel2D/: Pk_beta_6p67_K200.npy  bichannel2d.py  input.toml  tams_bichannel.py  test_bichannel.py
examples/Boussinesq/: Boussinesq_2DAMOC.py  README.md  (+21 more)
pytams/: __init__.py  bin.py  daskutils.py  database.py  fmodel.py  snapshot.py  sqldb.py  tams.py  taskrunner.py  trajectory.py  utils.py  worker.py  xmlutils.py
tests/: conftest.py  dwmodel.py  models.py  test_bin.py  test_database.py  test_sqlpool.py  test_tams.py  test_trajectory.py  test_worker.py  test_xmlutils.py
(+59 files in other folders)
