# see documentation, e.g.
# - https://packaging.python.org/tutorials/packaging-projects/#configuring-metadata
# - https://setuptools.readthedocs.io/en/latest/userguide/declarative_config.html
# - https://www.python.org/dev/peps/pep-0314/

[metadata]
author = Lucas Esclapez
author_email = l.esclapez@esciencecenter.nl
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Natural Language :: English
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
description = An implementation of the trajectory-adaptive multilevel splitting (TAMS) method.
keywords =
    Rare events probability
    Stochastic systems
long_description = file: README.md
long_description_content_type = text/markdown
name = pyTAMS
project_urls =
    Bug Tracker = git@github.com:nlesc-eTAOC/pyTAMS/issues
url = git@github.com:nlesc-eTAOC/pyTAMS
version = 0.0.3

[options]
zip_safe = False
python_requires = >=3.10
include_package_data = True
packages = find:
install_requires =
  toml
  numpy < 2.0
  matplotlib
  netCDF4
  dask
  dask [distributed]
  dask-jobqueue

[options.data_files]
# This section requires setuptools>=40.6.0
# It remains empty for now
# Check if MANIFEST.in works for your purposes

[options.extras_require]
dev =
    bump2version
    coverage [toml]
    ruff
    pytest
    pytest-cov
    pytest-dependency
    sphinx
    sphinx_rtd_theme
    sphinx-autoapi
    tox
    myst_parser
publishing =
    twine
    wheel

[options.packages.find]
include = pytams, pytams.*
